--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-jetty'
     implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'dev.czechitas.java2:czechitas-spring-boot-starter:1.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.flywaydb:flyway-core'
+
+    runtimeOnly 'com.h2database:h2'
 
     modules {
         module('org.springframework.boot:spring-boot-starter-tomcat') {
@@ -36,4 +41,11 @@ java {
 
 test {
     useJUnitPlatform()
+}
+
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
 }
